# wake-on-lan-web

./: Agents.md  LICENSE  Readme.md  gemini.md
.github/workflows/: deploy-demo.yml
backend/: .env  .gitignore  Cargo.toml  Readme.md
backend/migrations/: 20260117224457_initial_setup.sql  20260119175838_create_refresh_tokens_table.sql  20260119180557_add_is_disabled_to_users.sql
backend/src/: auth.rs  db.rs  main.rs
backend/src/api/: devices.rs  mod.rs  users.rs
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/demo/: DemoBanner.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/ui/: card.tsx  sonner.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: ChangePassword.tsx  Dashboard.tsx  Login.tsx  Users.tsx
frontend/src/services/: api.interface.ts  api.mock.ts  api.real.ts  index.ts
