[package]
name = "backend"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
jsonwebtoken = { version = "10.2.0", features = ["default", "rust_crypto", "use_pem"] }
rand = "0.9.2"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
surge-ping = "0.8.4"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
wake-on-lan = "0.2.0"

[profile.dev]
# 0 = no debug info (fastest)
# 1 = line tables only (you can see code, but not variable values in some cases)
# 2 = full debug info (default, slowest)
debug = 2
split-debuginfo = "unpacked"

[profile.dev.package."*"]
# Strip debug info from ALL dependencies. 
# This makes the binary tiny and linking instant.
debug = 0
# opt-level = 3 # Make dependencies run fast even in debug mode